# pico-dirtyJtag

./: .gitmodules  CMakeLists.txt  README.md  a5clk.pio  a5pins.c  a5pins.h  adc.c  adc.h  adf4368.c  adf4368.h  arm.h  armx.c  build.sh  cdc_uart.h  cmd.c  cmd.h  config.h  dhcp.h  dirtyJtag.c  dirtyJtagConfig.h  eth_dbgsrv.c  eth_fwupd.c  eth_tcpsrv.c  eth_udpsrv.c  ethernet.c  ethernet.c.old  ethernet.h  git.c.in  git.h  git_watcher.cmake  jtag.pio  jtagx.c  led.c  led.h  main.c  misc.h  pico-w5500.gitdiff  pio_jtag.c  pio_jtag.h  tusb_config.h  (+4 more)
